@@ -13,6 +13,7 @@ PHP                                                                        NEWS
 - Fixed bug #38891 (get_headers() do not work with curl-wrappers). (Ilia)
 - Fixed bug #38844 (curl_easy_strerror() is defined only since cURL 7.12.0).
   (Tony)
+- Fixed bug #38808 ("maybe ref" issue for current() and others). (Dmitry)
 - Fixed bug #38623 (leaks in a tricky code with switch() and exceptions).
   (Dmitry)
 - Fixed bug #38579 (include_once() may include the same file twice). (Dmitry)
